# litellm

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
examples/completion/: async_request.py  streaming_request.py  sync_request.py
examples/observability/: callback.py
examples/proxy/: config.yaml  internal_user.py
